<resources>
    <string name="app_name">Projectt</string>
    <string name="analog_clock_1">An analog clock has two hands. The shorter hand shows the hour. The longer hand shows the minutes.You can read an analog clock by looking at the hands.
First, look at the hour hand. It points directly to the number of the hour or somewhere between that number and the next number</string>
    <string name="analog_clock_2">                                                       Look at this example. The hour hand is between 8 and 9. So, the hour is 8.</string>
    <string name="analog_minute">Then, look at the minute hand. The minute hand starts at the top of the clock. For every minute that passes, it moves one tick mark around the clock. Start at the top and count the tick marks to see how many minutes have passed.</string>
    <string name="analog_minute_by1">      You can count by 1s.</string>
    <string name="analog_minute_by5">      Or, you can count by 5s.</string>
    <string name="practice">Practice</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="multiplication">Multiplication</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="analog_clocks">Analog Clocks</string>
    <string name="multiplicatin_text_1">Multiplication is a way of adding the same number many times. For example, if you have 3 apples and you want to add 3 more apples, you can write 3 + 3 = 6. But what if you want to add 3 apples 4 times? That would be a lot of writing: 3 + 3 + 3 + 3 = 12.</string>
    <string name="multiplication_text_2">You can think of multiplication as repeated addition or as making groups of the same size. For example, if you have 4 groups of 3 apples each, you can write 4 × 3 = 12. This means make 4 groups of 3.</string>
    <string name="multiplication_text_3">There is a shortcut for this: we can use a symbol called the multiplication sign (×) and write 3 × 4 = 12. This means add 3 four times. The number 3 is called the multiplicand and the number 4 is called the multiplier. The result of multiplication is called the product.</string>
    <string name="high_score">High Score :</string>
    <string name="score">Score :</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="score2">Score : </string>
    <string name="right_answer">Right Answer</string>
    <string name="memory">Memory</string>
    <string name="memory_text">In this part you need to remember the digits shown on screen in order.You will see some digits and then you will asked to write those digits in order that you saw them or backwards order</string>
    <string name="practice_reverse_order">Practice reverse order</string>
    <string name="practice_forward_order">Practice forward order</string>
    <string name="memory_prac_fwd">Enter the digits in forward order</string>
    <string name="memory_prac_rvs">Enter the digits in reverse order</string>
    <string name="next">Next</string>
    <string name="in">In</string>
    <string name="on">On</string>
    <string name="behind">Behind</string>
    <string name="between">Between</string>
    <string name="infrontof">In front of</string>
    <string name="nextto">Next to</string>
    <string name="opposite">Opposite</string>
    <string name="under">Under</string>
    <string name="gameover">Game Over</string>
    <string name="days">Days</string>
    <string name="seasons">Seasons</string>
    <string name="spelling">Spelling</string>
    <string name="months">Months</string>
    <string name="mainmenu">Main Menu</string>
    <string name="days_whatcomesafter">What comes after </string>
    <string name="days_whatcomesbefore">What comes before </string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="bird">bird</string>
    <string name="bull">bull</string>
    <string name="cat">cat</string>
    <string name="cow">cow</string>
    <string name="crab">crab</string>
    <string name="dog">dog</string>
    <string name="dragon">dragon</string>
    <string name="duck">duck</string>
    <string name="elephant">elephant</string>
    <string name="fox">fox</string>
    <string name="frog">frog</string>
    <string name="horse">horse</string>
    <string name="monkey">monkey</string>
    <string name="panda">panda</string>
    <string name="penguin">penguin</string>
    <string name="answer">Answer</string>
    <string name="findpairs">Find Pairs</string>
    <string name="victory">Victory</string>
    <string name="youwon">YOU WON !!</string>
    <string name="_30_minutes_past_also_means_half_past">30 minutes past also means half past.</string>
    <string name="_45_minutes_past_seven_also_means_quarter_to_eight">45 minutes past seven also means quarter to eight</string>
    <string name="some_of_the_minutes_have_special_names_if_minute_is_0_it_also_means_o_clock">Some of the minutes have special names. If minute is 0 it also means o\'clock.</string>
    <string name="digital_clock_are_easy_to_read_first_part_specifys_hour_and_the_second_part_specifies_minute_clock_on_the_left_means_eight_past_ten_minutes">Digital clock are easy to read. First part specifys hour and the second part specifies minute. Clock on the left means eight past ten minutes</string>
    <string name="_15_minutes_past_also_means_quarter_past">15 minutes past also means quarter past.</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="eleven">Eleven</string>
    <string name="twelve">Twelve</string>
    <string name="oclock">O\'clock</string>
    <string name="twenty">Twenty</string>
    <string name="thirty">Thirty</string>
    <string name="forty">Forty</string>
    <string name="fifty">Fifty</string>
    <string name="sixty">Sixty</string>
    <string name="past">past</string>
    <string name="directions">Directions</string>
    <string name="loginpage">Login page</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

</resources>
