<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".multiplication">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="206dp"
        android:layout_height="90dp"
        android:text="@string/_30_minutes_past_also_means_half_past"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="206dp"
        android:layout_height="90dp"
        android:text="@string/_45_minutes_past_seven_also_means_quarter_to_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="206dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        app:srcCompat="@drawable/l_ten_thirty" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="206dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:srcCompat="@drawable/l_seven_fortyfive" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="206dp"
        android:layout_height="90dp"
        android:text="@string/some_of_the_minutes_have_special_names_if_minute_is_0_it_also_means_o_clock"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="206dp"
        android:layout_height="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:srcCompat="@drawable/l_three" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="206dp"
        android:layout_height="90dp"
        android:text="@string/digital_clock_are_easy_to_read_first_part_specifys_hour_and_the_second_part_specifies_minute_clock_on_the_left_means_eight_past_ten_minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="206dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/d_eight_ten" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="206dp"
        android:layout_height="90dp"
        android:text="@string/_15_minutes_past_also_means_quarter_past"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="206dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/l_five_fifteen" />

    <Button
        android:id="@+id/button_digital_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="162dp"
        android:text="@string/practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />
</androidx.constraintlayout.widget.ConstraintLayout>