<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".multiplication">

    <TextView
        android:id="@+id/textView_spelling_prac_high_score"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_score"
        app:layout_constraintEnd_toStartOf="@+id/textView_spelling_prac_high_score"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:id="@+id/textView_52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/textView_spelling_practice_score"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintStart_toEndOf="@+id/textView_52"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ImageView
        android:id="@+id/imageView_spelling_prac_question"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_spelling_prac_high_score"

        />

    <EditText
        android:id="@+id/editText_spelling_prac_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/button_spelling_prac_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_spelling_prac_question" />

    <Button
        android:id="@+id/button_spelling_prac_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText_spelling_prac_answer"
        app:layout_constraintTop_toBottomOf="@+id/imageView_spelling_prac_question" />

</androidx.constraintlayout.widget.ConstraintLayout>